# translater2

./: .gitignore  CMakeLists.txt  customQSGService.cpp  fileMonitor.cpp  handler.cpp  handler.h  interface.cpp  operatorGraph.cpp  operatorGraph.h  recoverUserState.cpp  synchronizer.cpp
app2/: CMakeLists.txt  interface.cpp  main.cpp  service.cpp  train.cpp  util.h
app2/py/: service.py
app2/resource/: .rea
plugin/aws/: CMakeLists.txt  awsStorage.cpp  awsStorage.h  aws_s3.cpp  aws_s3.h  service.cpp  test_storage.cpp
plugin/cgal/: CMakeLists.txt  shape.cpp
plugin/dpst/: CMakeLists.txt  CMakeLists2.txt  dpstAnnoHandler.cpp  dpstAnnoHandler.h  dpstTrainHandler.cpp  interface.cpp  ssdp.cpp  ssdp.h
plugin/dpst/resource/: .rea
plugin/handler/: 3DHandler.cpp  CMakeLists.txt  customCameraController.cpp  customCameraController.h  dpstOptGph.cpp  eChartHandler.cpp  guiHandler.cpp  htmlHandler.cpp  imageHandler.cpp  menuHandler.cpp  mideaHandler.cpp  operatorGraphHandler.cpp  qsgHandler.cpp  resourceHandler.cpp  statusHandler.cpp  textHandler.cpp
plugin/opencv/: CMakeLists.txt  imageEx.cpp  util.cpp  util.h
plugin/qml/: CMakeLists.txt  CMakeLists2.txt  main.cpp  main.qml  qml.qrc
plugin/qml/gui/: CommonSv.qml  CustomSv.qml  GridItem.qml  GridsModel.qml  ReaGrid.qml  Web.qml  html_main.qml
plugin/qml/gui/service/3d/: SG.qml
plugin/qml/gui/service/dpst_anno/: DpstQSG.qml
plugin/qml/gui/service/dpst_optgph__/: dpstOptgph.qml
plugin/qml/gui/service/dpst_train/: Deepsight.qml
plugin/qml/gui/service/dpst_train/dialog/: ViewMap.qml  VisibleSet.qml
plugin/qml/gui/service/echart/: chart.qml
plugin/qml/gui/service/html/: Web2.qml
plugin/qml/gui/service/image/: QSG.qml
plugin/qml/gui/service/image/dialog/: ImageShow.qml
plugin/qml/gui/service/menu__/: mainMenu.qml
plugin/qml/gui/service/midea/: Media.qml
plugin/qml/gui/service/optgph/: OptGph.qml
plugin/qml/gui/service/optgph/OptGph/: Util.qml  ViewMonitor.qml  inputImage.qml  qmldir  setImageOpacity.qml  showOneImage.qml
plugin/qml/gui/service/resource/: Resource.qml
plugin/qml/gui/service/resource__/: Resource.qml
plugin/qml/gui/service/status__/: mainStatus.qml
plugin/qml/gui/service/text/: TXT.qml
plugin/qml/gui/service/titlebar__/: titleBar.qml
plugin/qml/service/: ImageShow.qml  Interface.qml  ReaGrid.qml  Service.qml  Splash.qml
plugin/splash/: CMakeLists.txt  CMakeLists2.txt  main.cpp  qml.qrc
plugin/splash/gui/: Splash.qml
plugin/webpack/: CMakeLists2.txt  package-lock.json  package.json  webpack.config.js
plugin/webpack/src/html/: chart.html  fstree.html  grid.html  text.html
plugin/webpack/src/js/: chart.js  fstree.js  grid.js  text.js
plugin/webpack/src/js/fstree/: style.scss
plugin/webpack/src/js/grid/: style.scss
plugin/webpack/src/js/text/: style.scss
plugin/webpack/src/js0/: text-quill.js
